# tree-tracker

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerrun.aws.json  Home.py  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  util.py
.ebextensions/: 01_nginx.config
.elasticbeanstalk/: config.yml
.elasticbeanstalk/saved_configs/: prod-sc.cfg.yml  prod.cfg.yml  tree-tracker-prod-conf.cfg.yml
data/meteor/: ERA5_Land_2020_2022_t2m.grib.923a8.idx  ERA5_Land_2020_2022_te.grib.923a8.idx  ERA5_Land_2020_2022_tp.grib.923a8.idx
data/parcel/: BondyPlantedParcels.geojson
data/planet/Antolojanahary/: Antolojanahary.geojson
pages/: 1_🔮Model_Prediction.py  2_🩺Vegetation_Indices.py  3_🌤️Meterological_Data.py  4_📁Upload Drone Image.py  5_📒Instructions.py
tree_tracker/: util.py
