[tool.poetry]
name = "tree-tracker"
version = "0.0.1"
description = "Bondy Tree Tracker App"
authors = ["Abdulazeez Jimoh <abdulazeezojimoh@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tree_tracker", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
eccodes = "^1.6.1"
cfgrib = "^0.9.10.4"
geopandas = "^0.14.1"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
onnxruntime = "^1.16.3"
opencv-python-headless = "^4.8.1.78"
pandas = "^2.1.4"
pillow = "^10.1.0"
plotly = "^5.18.0"
rasterio = "^1.3.9"
rasterstats = "^0.19.0"
scikit-image = "^0.22.0"
streamlit = "^1.29.0"
xarray = "^2023.12.0"
boto3 = "^1.34.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.12.0"
pre-commit = "^3.5.0"
ruff = "^0.1.7"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

